tests/errors/err_mut_param_immutable_arg.mix
// ERROR: must be mutable
set_to(v!: int, next: int)
    v! = next

main()
    x = 0
    set_to(x, 1)
